fixed scrollbar tab movement

--- a/october-response_yellow/160x600_v2alt/css/style.css
+++ b/october-response_yellow/160x600_v2alt/css/style.css
@@ -404,7 +404,7 @@ h3,strong { font-weight: 700; }
 }
 .mCSB_scrollTools .mCSB_draggerContainer {
     bottom: 0;
-    height: 36px;
+    height: 132px;
     left: 0;
     position: absolute;
     right: 0;
