--- a/october-response_yellow/300x600_v2alt/css/style.css
+++ b/october-response_yellow/300x600_v2alt/css/style.css
@@ -401,7 +401,7 @@ h3,strong { font-weight: 700; }
 }
 .mCSB_scrollTools .mCSB_draggerContainer {
     bottom: 0;
-    height: 36px;
+    height: 155px;
     left: 0;
     position: absolute;
     right: 0;
